23 06 2016 slider z-index fix

--- a/css/layout.css
+++ b/css/layout.css
@@ -2033,7 +2033,7 @@ a.ia-middle:hover .ia-desc {
 }
 #beaverslider a {
 position: relative;
-z-index: 999;
+z-index: 100;
 }
 #cart_empty,
 .delivery_message {
